--- a/imports/ui/public/auth/reset-password.html
+++ b/imports/ui/public/auth/reset-password.html
@@ -1,3 +1,34 @@
 <template name="public.auth.reset-password">
-    Reset password
+    <section class="hero is-fullheight is-success is-bold">
+        <div class="hero-body">
+            <div class="container">
+                <div class="columns">
+                    <div class="column is-4 is-offset-4">
+                        <h1 class="title">Reset your password</h1>
+                        <div class="box">
+                            {{#autoForm schema=resetPasswordForm id=formId}}
+                                <label class="label">{{afFieldLabelText name="newPassword"}}</label>
+                                <p class="control">
+                                    {{> afFieldInput name="newPassword" class="input"}}
+                                    <span class="help is-danger">{{{afFieldMessage name='newPassword'}}}</span>
+                                </p>
+                                <label class="label">{{afFieldLabelText name="confirmPassword"}}</label>
+                                <p class="control">
+                                    {{> afFieldInput name="confirmPassword" class="input"}}
+                                    <span class="help is-danger">{{{afFieldMessage name='confirmPassword'}}}</span>
+                                </p>
+                                <hr>
+                                <p class="control">
+                                    <button type="submit" class="button is-primary">
+                                        Submit
+                                    </button>
+                                    <a href="{{pathFor 'public.auth.login'}}" class="button">Cancel</a>
+                                </p>
+                            {{/autoForm}}
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </template>
