--- a/client/head.html
+++ b/client/head.html
@@ -3,4 +3,5 @@
     <title>Eldir</title>
     <meta name="description" content="Eldir is photo hosting and sharing platform">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, minimal-ui, maximum-scale=1, minimum-scale=1" />
+    <link rel="stylesheet" href="/assets/css/bulma.css">
 </head>
