--- a/imports/ui/layout.html
+++ b/imports/ui/layout.html
@@ -10,4 +10,9 @@
 
     <!-- Alerts component-->
     {{> sAlert}}
+
+    <!-- Modals templates -->
+    {{#each modal in modals}}
+        {{> Template.dynamic template=modal}}
+    {{/each}}
 </template>
