--- a/imports/ui/public/auth/forgot-password.html
+++ b/imports/ui/public/auth/forgot-password.html
@@ -1,3 +1,29 @@
 <template name="public.auth.forgot-password">
-    Forgot password
+    <section class="hero is-fullheight is-danger is-bold">
+        <div class="hero-body">
+            <div class="container">
+                <div class="columns">
+                    <div class="column is-4 is-offset-4">
+                        <h1 class="title">Forgot your password</h1>
+                        <div class="box">
+                            {{#autoForm schema=forgotPasswordForm id=formId type="method" meteormethod="users.forgot"}}
+                                <label class="label">{{afFieldLabelText name="email"}}</label>
+                                <p class="control">
+                                    {{> afFieldInput name="email" class="input"}}
+                                    <span class="help is-danger">{{{afFieldMessage name='email'}}}</span>
+                                </p>
+                                <hr>
+                                <p class="control">
+                                    <button type="submit" class="button is-primary">
+                                        Submit
+                                    </button>
+                                    <a href="{{pathFor 'public.auth.login'}}" class="button">Cancel</a>
+                                </p>
+                            {{/autoForm}}
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </template>
