--- a/imports/ui/rea/index.html
+++ b/imports/ui/rea/index.html
@@ -1,3 +1,57 @@
 <template name="rea.index">
-    Index
+    <section class="section">
+        <div class="container">
+            <div class="columns">
+                <div class="column is-2">
+                    <aside class="menu">
+                        <p class="menu-label">
+                            General
+                        </p>
+                        <ul class="menu-list">
+                            <li><a>Albums</a></li>
+                            <li><a>Something else</a></li>
+                        </ul>
+                    </aside>
+                </div>
+                <div class="column">
+                    <h1 class="title">Albums</h1>
+                    <h3 class="subtitle">Last 0 albums created</h3>
+                    <div class="columns is-multiline">
+                    <!--{{#each album in albums}}-->
+                        <div class="column is-4">
+                            <div class="card">
+                                <div class="card-image">
+                                    <figure class="image is-4by3">
+                                        <img src="http://bulma.io/images/placeholders/1280x960.png" alt="Image">
+                                    </figure>
+                                </div>
+                                <div class="card-content">
+                                    <div class="media">
+                                        <div class="media-left">
+                                            <figure class="image" style="height: 40px; width: 40px;">
+                                                <img src="http://bulma.io/images/placeholders/96x96.png" alt="Image">
+                                            </figure>
+                                        </div>
+                                        <div class="media-content">
+                                            <p class="title is-4">John Smith</p>
+                                            <p class="subtitle is-6">@johnsmith</p>
+                                        </div>
+                                    </div>
+
+                                    <div class="content">
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                        Phasellus nec iaculis mauris. <a>@bulmaio</a>.
+                                        <a>#css</a> <a>#responsive</a>
+                                        <br>
+                                        <small>11:09 PM - 1 Jan 2016</small>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                            <!--{{/each}}-->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </template>
