--- a/imports/ui/rea/albums/modals/create.modal.html
+++ b/imports/ui/rea/albums/modals/create.modal.html
@@ -1,6 +1,6 @@
 <template name="rea.albums.modals.create">
     <div class="modal {{isActive}}">
-        <div class="modal-background"></div>
+        <div class="modal-background js-hide-modal"></div>
         <div class="modal-content">
             <div class="section" style="-webkit-border-radius: 4px;-moz-border-radius: 4px;border-radius: 4px;">
                 <h1 class="title">Create new album</h1>
@@ -11,6 +11,11 @@
                         {{> afFieldInput name="title" class="input"}}
                         <span class="help is-danger">{{{afFieldMessage name='title'}}}</span>
                     </p>
+                    <label class="label">{{afFieldLabelText name="description"}}</label>
+                    <p class="control">
+                        {{> afFieldInput name="description" class="textarea"}}
+                        <span class="help is-danger">{{{afFieldMessage name='description'}}}</span>
+                    </p>
                     <p class="control">
                         <button type="submit" class="button is-success">
                             Submit
@@ -19,6 +24,6 @@
                 {{/autoForm}}
             </div>
         </div>
-        <button class="modal-close"></button>
+        <button class="modal-close js-hide-modal"></button>
     </div>
 </template>
