--- a/imports/ui/public/auth/forgot-password.html
+++ b/imports/ui/public/auth/forgot-password.html
@@ -1,5 +1,5 @@
 <template name="public.auth.forgot-password">
-    <section class="hero is-fullheight is-danger is-bold">
+    <section class="hero is-fullheight is-primary is-bold">
         <div class="hero-body">
             <div class="container">
                 <div class="columns">
@@ -26,4 +26,6 @@
             </div>
         </div>
     </section>
+
+    {{> sAlert}}
 </template>
