--- a/imports/ui/public/auth/register.html
+++ b/imports/ui/public/auth/register.html
@@ -1,5 +1,5 @@
 <template name="public.auth.register">
-    <section class="hero is-fullheight is-light is-bold">
+    <section class="hero is-fullheight is-primary is-bold">
         <div class="hero-body">
             <div class="container">
                 <div class="columns">
@@ -48,4 +48,6 @@
             </div>
         </div>
     </section>
+
+    {{> sAlert}}
 </template>
