--- a/client/head.html
+++ b/client/head.html
@@ -1,6 +1,6 @@
 <head>
     <meta charset="utf-8">
-    <title>Eldir</title>
+    <title>Eldir.au</title>
     <meta name="description" content="Eldir is photo hosting and sharing platform">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, minimal-ui, maximum-scale=1, minimum-scale=1" />
     <link rel="stylesheet" href="/assets/css/bulma.css">
