--- a/imports/ui/rea/albums/modals/albums.modal.html
+++ b/imports/ui/rea/albums/modals/albums.modal.html
@@ -1,15 +1,15 @@
-<template name="rea.albums.modals.create">
+<template name="rea.albums.modals">
     <div class="modal {{isActive}}">
         <div class="modal-background js-hide-modal"></div>
         <div class="modal-content">
             <div class="section" style="-webkit-border-radius: 4px;-moz-border-radius: 4px;border-radius: 4px;">
-                <h1 class="title">Create new album</h1>
+                <h1 class="title">{{title}}</h1>
                 <hr>
-                {{#autoForm schema=createAlbumForm id="createAlbumModal" resetOnSuccess=true}}
-                    <label class="label">{{afFieldLabelText name="title"}}</label>
+                {{#autoForm schema=albumForm id=modalId resetOnSuccess=true doc=album}}
+                    <label class="label">{{afFieldLabelText name="name"}}</label>
                     <p class="control">
-                        {{> afFieldInput name="title" class="input"}}
-                        <span class="help is-danger">{{{afFieldMessage name='title'}}}</span>
+                        {{> afFieldInput name="name" class="input"}}
+                        <span class="help is-danger">{{{afFieldMessage name='name'}}}</span>
                     </p>
                     <label class="label">{{afFieldLabelText name="description"}}</label>
                     <p class="control">
