--- a/imports/ui/rea/albums/modals/albums.modal.html
+++ b/imports/ui/rea/albums/modals/albums.modal.html
@@ -1,14 +1,16 @@
 <template name="rea.albums.modals">
     <div class="modal {{isActive}}">
         <div class="modal-background js-hide-modal"></div>
-        <div class="modal-content">
-            <div class="section" style="-webkit-border-radius: 4px;-moz-border-radius: 4px;border-radius: 4px;">
-                <h1 class="title">{{title}}</h1>
-                <hr>
+        <div class="modal-card is-rounded">
+            <header class="modal-card-head">
+                <p class="modal-card-title">{{title}}</p>
+                <button class="delete js-hide-modal"></button>
+            </header>
+            <section class="modal-card-body">
                 {{#autoForm schema=albumForm id=modalId resetOnSuccess=true doc=album}}
                     <label class="label">{{afFieldLabelText name="name"}}</label>
                     <p class="control">
-                        {{> afFieldInput name="name" class="input"}}
+                        {{> afFieldInput name="name" class="input" autofocus=true}}
                         <span class="help is-danger">{{{afFieldMessage name='name'}}}</span>
                     </p>
                     <label class="label">{{afFieldLabelText name="description"}}</label>
@@ -22,8 +24,7 @@
                         </button>
                     </p>
                 {{/autoForm}}
-            </div>
+            </section>
         </div>
-        <button class="modal-close js-hide-modal"></button>
     </div>
 </template>
