--- a/imports/ui/rea/albums/modals/photo.modal.html
+++ b/imports/ui/rea/albums/modals/photo.modal.html
@@ -1,19 +1,98 @@
-<template name="rea.photo-view.modal">
-    <div class="modal is-active">
+<template name="rea.photo.modal">
+    <div class="modal is-active photo_modal">
         <div class="modal-background js-close"></div>
         <div class="modal-content">
-            <p class="previous">
-                &lsaquo;
-            </p>
-            <p class="image is-4by3">
-                {{#each photo in photos}}
-                    <img src="{{fileURL photo}}" alt="{{photo.name}}">
-                {{/each}}
-            </p>
-            <p class="next">
-                &rsaquo;
-            </p>
+            {{#each photo in photos}}
+                <div class="photo-container">
+                    {{#each previousPhoto}}
+                        <p class="previous">
+                            <a href="{{pathFor 'rea.albums.photo.view' albumId=this.meta.albumId
+                                               photoId=this._id}}">&lsaquo;</a>
+                        </p>
+                    {{/each}}
+                    <div class="photo" style="background-image: url({{fileURL photo}});">
+                        {{#each nextPhoto}}
+                            <a href="{{pathFor 'rea.albums.photo.view' albumId=this.meta.albumId photoId=this._id}}"></a>
+                        {{/each}}
+                    </div>
+                    {{#each nextPhoto}}
+                        <p class="next">
+                            <a href="{{pathFor 'rea.albums.photo.view' albumId=this.meta.albumId
+                                               photoId=this._id}}">&rsaquo;</a>
+                        </p>
+                    {{/each}}
+                </div>
+                <div class="photo-details">
+                    <button class="modal-close js-close"></button>
+                    {{#with owner photo.userId}}
+                        <article class="media" style="margin-bottom: 15px;">
+                            <figure class="media-left">
+                                <p class="image is-48x48">
+                                    <img src="{{gravatarUrl this.emails.[0].address}}">
+                                </p>
+                            </figure>
+                            <div class="media-content">
+                                <div class="content">
+                                    <p>
+                                        <strong>{{this.fullName}}</strong>
+                                    </p>
+                                </div>
+                            </div>
+                        </article>
+                    {{/with}}
+                    {{#unless editing}}
+                        <h1 class="title is-3 is-bold name">
+                            {{#with photo.meta.name}}
+                                {{this}}
+                            {{else}}
+                                <em>No name</em>
+                            {{/with}}
+                        </h1>
+                        <h2 class="title is-5 description">
+                            {{#with photo.meta.description}}
+                                {{this}}
+                            {{else}}
+                                <em>No description.</em>
+                            {{/with}}
+                        </h2>
+                        <p class="title is-6 date">
+                            {{formatDate photo.meta.uploadedAt 'MMMM Do HH:mm'}}
+                        </p>
+                        {{#if isOwner photo.userId}}
+                            <div class="control is-grouped">
+                                <p class="control">
+                                    <button class="button is-small is-warning js-photo-edit">Edit</button>
+                                </p>
+                                <p class="control">
+                                    <button class="button is-small is-danger js-photo-remove">Remove</button>
+                                </p>
+                            </div>
+                        {{/if}}
+                    {{else}}
+                        <h1 class="title is-5">Editing this photo</h1>
+                        {{#autoForm schema=photoForm id="photo.modal.edit" doc=photo.meta}}
+                            <label class="label">{{afFieldLabelText name="name"}}</label>
+                            <p class="control">
+                                {{> afFieldInput name="name" class="input"}}
+                                <span class="help is-danger">{{{afFieldMessage name='name'}}}</span>
+                            </p>
+                            <label class="label">{{afFieldLabelText name="description"}}</label>
+                            <p class="control">
+                                {{> afFieldInput name="description" class="textarea"}}
+                                <span class="help is-danger">{{{afFieldMessage name='description'}}}</span>
+                            </p>
+                            <p class="control">
+                                <button type="submit" class="button is-success">
+                                    Submit
+                                </button>
+                                <button class="button js-cancel-editing">
+                                    Cancel
+                                </button>
+                            </p>
+                        {{/autoForm}}
+                    {{/unless}}
+                </div>
+            {{/each}}
         </div>
-        <button class="modal-close js-close"></button>
     </div>
 </template>
