--- a/imports/ui/public/auth/forgot-password.html
+++ b/imports/ui/public/auth/forgot-password.html
@@ -17,7 +17,7 @@
                                     <button type="submit" class="button is-primary">
                                         Submit
                                     </button>
-                                    <a href="{{pathFor 'public.auth.login'}}" class="button">Cancel</a>
+                                    <a href="{{pathFor 'public.auth.login'}}" class="button is-link">Cancel</a>
                                 </p>
                             {{/autoForm}}
                         </div>
