--- a/imports/ui/public/auth/register.html
+++ b/imports/ui/public/auth/register.html
@@ -37,7 +37,7 @@
                                     <button type="submit" class="button is-primary">
                                         Register
                                     </button>
-                                    <a href="{{pathFor 'public.auth.login'}}" class="button">
+                                    <a href="{{pathFor 'public.auth.login'}}" class="button is-link">
                                         Cancel
                                     </a>
                                 </p>
